<resources>
    <string name="app_name">ruben_arias_martinez_PMDM_Tarea1</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_contraseña">Contraseña:</string>
    <string name="edit_text_inicio_sesion"></string>
    <string name="button_iniciar_sesion">Iniciar Sesión</string>
    <string name="button_modificar_credenciales">Modificar Credenciales</string>
    <string name="label_bienvenido">Bienvenido:\t\t</string>
    <string name="button_poner_alarma">Poner Alarma</string>
    <string name="label_hora">Hora:</string>
    <string name="label_minutos">Minutos:</string>
    <string name="label_titulo_modificar_credenciales">Modificar Credenciales</string>
    <string name="label_nuevo_nombre_usuario">Nuevo nombre de Usuario:</string>
    <string name="label_nueva_contraseña">Nueva contraseña:</string>
    <string name="button_guardar_cambios">Guardar Cambios</string>
</resources>