<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/fondoAlarma"
    android:backgroundTint="@color/fondoAlarma"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center"
    tools:context=".Poner_Alarma_3">

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="520dp"
        android:background="@color/black"
        android:backgroundTint="@color/fondoAlarma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="121dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"> <!-- Aquí también se debe ver reflejado -->
            <TextView
                android:id="@+id/textViewHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hora" />

            <EditText
                android:id="@+id/editTextHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"> <!-- Aquí también se debe ver reflejado -->
            <TextView
                android:id="@+id/textViewMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_minutos" />

            <EditText
                android:id="@+id/editTextMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"> <!-- Aquí también se debe ver reflejado -->
            <Button
                android:id="@+id/buttonPonerAlarma"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azulApp"
                android:gravity="center"
                android:text="@string/button_poner_alarma"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.822" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>